CSS fixes (article radius overflow bleed)

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -7,8 +7,9 @@ section#tweets article {
     height: 200px;
     background-color: #ffffff;
     border: 1px solid #cfcfcf;
-    border-radius: 5px;
+    border-radius: 5px !important;
     margin: 1em 0;
+    overflow: hidden;
 }
 
 section#tweets article.highlighted {
@@ -26,7 +27,7 @@ section#tweets article header {
     position: relative;
     height: 75px;
     width: 75px;
-    border-radius: 5px;    
+    border-radius: 5px;
 }
 
 .tweet-author-name {
@@ -55,7 +56,7 @@ section#tweets article header {
 }
 
 section#tweets article header > span {
-    top: 1; 
+    top: 1;
     position: absolute;
     padding-top: 10px;
     padding-right: 10px;
